Fix filters not showing after player is closed
also increase z-index of window controlls.

--- a/src/app/styl/title_bar.styl
+++ b/src/app/styl/title_bar.styl
@@ -16,6 +16,7 @@
 	.btn-set
 		position: absolute;
 		left: 15px;
+		z-index: 10;
 
 	// Changes the min/max/close button position depending on OS
 	nav
@@ -75,6 +76,7 @@
 			color:#000;
 			background: transparent;
 			margin:0;
+			z-index: 10;
 			width:32px;
 			height:32px;
 			border-radius:0;
